# EchoWhistle

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml
asm/: defines.asm  hooks.asm  init.asm  itemservice.asm  macros.asm  main.asm  nmi_menu.asm  ram.asm  secrets.asm  text.asm  vanillalabels.asm
asm/data/: item_text.tbl
data/: secrets_ki.yaml
patch/: FF4FE.uE38B1FFCD8B111ED88626E3CD4289373.bps  echo_whistle.bps
src/: cli.rs  client.rs  secrets.rs  server.rs  service_request.rs
