[package]
name = "echo_whistle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ew-client"
path = "src/client.rs"

[[bin]]
name = "ew-server"
path = "src/server.rs"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
crossbeam-queue = "0.3.8"
env_logger = "0.10.0"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
once_cell = "1.17"
prost = "0.11"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9"

[build-dependencies]
# tonic-build = "0.9"

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
